# pyshop

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: cd.yml  ci.yml  python-tests.yml
alembic/versions/: a1b2c3d4e5f6_add_avatar_url_to_user.py  e6f7g8h9i0j1_add_order_and_orderitem_tables.py  f1g2h3i4j5k6_add_product_category_and_fields.py
app/: main.py  seed.py
app/auth/: backend.py
app/core/: config.py  storage.py
app/dependencies/: cart.py
app/models/: order.py  product.py  user.py
app/routers/: auth.py  orders.py  products.py  profile.py
app/services/: checkout_service.py
docs/: avatar-upload-feature.md  password-change-feature.md
frontend/: package-lock.json  package.json  vitest.config.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/about/: page.tsx
frontend/src/app/cart/: page.tsx
frontend/src/app/categories/: page.tsx
frontend/src/app/checkout/: page.tsx
frontend/src/app/contact/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/deals/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/orders/: page.tsx
frontend/src/app/products/: page.tsx
frontend/src/app/profile/: page.tsx
frontend/src/config/: index.ts
frontend/src/contexts/: AuthContext.tsx
frontend/src/hooks/: useCartCount.ts  useLogin.ts  useLogout.ts  useProducts.ts  useRegister.ts
frontend/src/test/: utils.tsx
frontend/src/types/: auth.ts  cart.ts  index.ts  order.ts
md_context/: checkout_implementation_summary.md  frontend_plan.md
monitoring/: grafana.json
scripts/: seed_products.py  seed_products.sql
terraform/: .gitignore  COST_OPTIMIZATION.md  INFRASTRUCTURE.md  Makefile  README.md  alb.tf  aurora_serverless.tf  dev.tfvars.example  dns.tf  ecs.tf  iam.tf  main.tf  monitoring.tf  network.tf  outputs.tf  production.tfvars.example  rds.tf  security_groups.tf  terraform.tfvars.example  ultra-low-cost.tfvars.example  variables.tf  vpc_endpoints.tf
terraform-azure/: COST_OPTIMIZATION.md  Makefile  README.md  app_service.tf  container_apps.tf  container_registry.tf  database.tf  dev.tfvars.example  key_vault.tf  main.tf  monitoring.tf  network.tf  outputs.tf  production.tfvars.example  terraform.tfvars.example  ultra-low-cost.tfvars.example  variables.tf
tests/: test_auth_backend.py  test_auth_endpoints.py  test_auth_schemas.py  test_checkout.py  test_cookie_management.py  test_user_manager.py
tests/e2e/: test_api_flow.py
(+24 files in other folders)
