[tool.poetry]
name = "pyshop-api"
version = "0.1.0"
description = "pyshop-api"
authors = ["Denis Połyncew"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.128.6"
uvicorn = {extras = ["standard"], version = "^0.40.0"}
sqlmodel = "^0.0.32"
asyncpg = "^0.31.0"
psycopg2-binary = "^2.9.11"
pytest-asyncio = "0.21.2"
prometheus-fastapi-instrumentator = "^7.1.0"
loguru = "^0.7.3"
fastapi-users = {extras = ["sqlalchemy"], version = "^14.0.1"}
python-jose = "^3.5.0"
alembic = "^1.18.3"
cryptography = "^45.0.7"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
aiosqlite = "^0.22.1"
httpx = "^0.28.1"
ruff = "^0.15.0"
black = "^25.12.0"
mypy = "^1.19.1"
pre-commit = "^4.5.1"
types-python-jose = "^3.5.0.20250531"
playwright = "^1.57.0"
pytest-playwright = "^0.7.2"
pytest-cov = "^7.0.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
extend-exclude = ["tests/**","alembic/**"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39']
extend-exclude = '''
/(
  alembic/versions/.*
)$
'''

[mypy]
python_version = 3.10
strict = true

